[package]
name = "biiter"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
documentation = "https://docs.rs/biiter"
readme = "README.md"
homepage = "https://github.com/muppi090909/BiIter"
repository = "https://github.com/muppi090909/BiIter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
